<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_scan"
        android:icon="@drawable/ic_scan"
        android:title="@string/menu_scan" />
    <item
        android:id="@+id/navigation_history"
        android:icon="@drawable/ic_history"
        android:title="@string/menu_history" />
    <item
        android:id="@+id/navigation_feedback"
        android:icon="@drawable/ic_feedback"
        android:title="@string/menu_feedback" />
    <item
        android:id="@+id/navigation_review"
        android:icon="@drawable/ic_review"
        android:title="@string/menu_review" />
    <item
        android:id="@+id/navigation_account"
        android:icon="@drawable/ic_account"
        android:title="@string/menu_account" />
</menu>