<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingStart="16dp"
    android:paddingEnd="16dp"
    tools:context=".ui.ScanFragment">

    <TextView
        style="@style/CCTextAppearance.Title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lesson_title" />

    <TextView
        android:id="@+id/txt_lesson_title"
        style="@style/CCTextAppearance.Info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        style="@style/CCTextAppearance.Title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/grade_title" />

    <TextView
        android:id="@+id/txt_grade_info"
        style="@style/CCTextAppearance.Info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        style="@style/CCTextAppearance.Title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lesson_number_title" />

    <TextView
        android:id="@+id/txt_lesson_number"
        style="@style/CCTextAppearance.Info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/bt_lesson_confirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/scan_confirm" />

</LinearLayout>