<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".ui.StudentNameFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edt_student_last_name"
        style="@style/CCTextAppearance.Input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/last_name">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edt_student_first_name"
        style="@style/CCTextAppearance.Input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/first_name">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/bt_student_name_confirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/scan_confirm" />

</LinearLayout>